--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <!-- Page Title -->
-    <title>Valdyn Hunt</title>
+    <title>Portfolio</title>
 
 <!-- Metadata -->
     <meta charset="UTF-8">
@@ -29,19 +29,19 @@
 
 <body>
     
-    <h1>Valdyn Hunt</h1>
+    <h1>Portfolio</h1>
 
     <nav>
         <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="portfolio/index.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/portfolio/index.html">Portfolio</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
-    </nav>      
+    </nav>    
 
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- Plugins(s) -->
+    <!-- LightGallery Plugins(s) -->
     
     <!-- My Scripts -->
     <script src="js/scripts.js"></script>
