--- a/404.html
+++ b/404.html
@@ -33,15 +33,16 @@ permalink: /404.html
 
 <body>
     
-    <h1>404</h1>
-
     <nav>
         <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="portfolio/index.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/">Homepage</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/portfolio/index.html">Portfolio</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
-    </nav>      
+    </nav>     
+    
+    <h1>404</h1>
 
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
