--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,10 @@
     
     <nav>
         <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="portfolio/index.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+                <li><a href="/">Homepage</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/portfolio/index.html">Portfolio</a></li>
+                <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>     
     
