--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
 </head>
 
 <body>
-    
-    <h1>Valdyn Hunt</h1>
 
     <nav>
         <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="portfolio/index.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+                <li><a href="/">Homepage</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/portfolio/index.html">Portfolio</a></li>
+                <li><a href="/contact.html">Contact</a></li>
         </ul>
-    </nav>      
+    </nav>   
+    
+    <h1>Valdyn Hunt</h1>
 
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
