add options to lightGallery

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -58,6 +58,30 @@
 
     </div>
 
+    <div id="gallery-2">
+
+        <a href="https://picsum.photos/800/600?image=100">
+            <img src="https://picsum.photos/100/100?image=100" alt="">
+        </a>
+
+        <a href="https://picsum.photos/800/600?image=100">
+            <img src="https://picsum.photos/100/100?image=100" alt="">
+        </a>
+        
+        <a href="https://picsum.photos/800/600?image=100">
+            <img src="https://picsum.photos/100/100?image=100" alt="">
+        </a>
+
+        <a href="https://picsum.photos/800/600?image=100">
+            <img src="https://picsum.photos/100/100?image=100" alt="">
+        </a>
+        
+        <a href="https://picsum.photos/800/600?image=100">
+            <img src="https://picsum.photos/100/100?image=100" alt="">
+        </a>
+
+    </div>
+
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- LightGallery Plugins(s) -->
