modify form and nav menu

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
     <link rel="manifest" href="/img/favicons/site.webmanifest">
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Montserrat:300|Philosopher" rel="stylesheet"> 
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
 
@@ -30,7 +31,7 @@
 <body>
 
     <nav>
-        <ul>
+        <ul id="nav">
                 <li><a href="/">Homepage</a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/portfolio/index.html">Portfolio</a></li>
@@ -39,7 +40,7 @@
     </nav>   
     
     <h1>Valdyn Hunt</h1>
-
+    <h3>Designer | Developer</h3>
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins(s) -->
