--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,6 +23,7 @@
 <!-- Required Plugin Stylesheets -->    
     <link rel="stylesheet" href="../css/lightgallery.min.css">
     <link rel="stylesheet" href="../css/lg-transitions.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Montserrat:300|Philosopher" rel="stylesheet"> 
 <!-- My Awesome Styling -->
     <link rel="stylesheet" href="../css/styles.css">
 
@@ -31,7 +32,7 @@
 <body>
         
     <nav>
-        <ul>
+        <ul id="nav">
                 <li><a href="/">Homepage</a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/portfolio/index.html">Portfolio</a></li>
