--- a/404.html
+++ b/404.html
@@ -19,6 +19,8 @@ permalink: /404.html
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
     <link rel="manifest" href="/img/favicons/site.webmanifest">
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Montserrat:300|Philosopher" rel="stylesheet"> 
+
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
 
@@ -34,7 +36,7 @@ permalink: /404.html
 <body>
     
     <nav>
-        <ul>
+        <ul id="nav">
             <li><a href="/">Homepage</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/portfolio/index.html">Portfolio</a></li>
