--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
     <link rel="manifest" href="/img/favicons/site.webmanifest">
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Montserrat:300|Philosopher" rel="stylesheet"> 
+
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
 
@@ -30,7 +32,7 @@
 <body>
 
     <nav>
-        <ul>
+        <ul id="nav">
                 <li><a href="/">Homepage</a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/portfolio/index.html">Portfolio</a></li>
