--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
     <link rel="manifest" href="/img/favicons/site.webmanifest">
+    <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#67c5e0">
     <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Montserrat:300|Philosopher" rel="stylesheet"> 
-    <meta name="msapplication-TileColor" content="#2b5797">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">    
 
 <!-- Normalize CSS via CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
