add responsive breakpoints and headings

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,3 +1,9 @@
+<!-- social media icons originally taken from iconmonstr 
+https://iconmonstr.com/linkedin-1-svg/
+https://iconmonstr.com/twitter-1-svg/
+https://iconmonstr.com/email-4-svg/
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -212,8 +218,17 @@
 
     <!-- Footer -->
     <footer id="footer">
+        <div class="div-border"></div>
+        <div class="footer-div">
+            <a href="https://linkedin.com/valdyn" class="social-link" target="_blank">
+            <img src="/img/iconmonstr-linkedin-1.png" alt=""></a>
+            <a href="https://twitter.com/valdyn" class="social-link" target="_blank">
+            <img src="/img/iconmonstr-twitter-1.png" alt=""></a>
+            <a href="mailto:valdyn@mac.com?subject=H%20to%20the%20ello" class="social-link" target="_blank">
+            <img src="/img/iconmonstr-email-4.png" alt=""></a>
             <p class="copyright">&copy; 2019 Valdyn Hunt</p>
-            <!-- <p class="copyright">&copy; 2019 Valdyn Hunt</p> -->
+        </div>
+            
     </footer>
 
     <!-- jQuery Library via CDN -->
