--- a/404.html
+++ b/404.html
@@ -35,14 +35,14 @@ permalink: /404.html
 
 <body>
     
-    <nav>
-        <ul id="nav">
-            <li><a href="/">Homepage</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/portfolio/index.html">Portfolio</a></li>
-            <li><a href="/contact.html">Contact</a></li>
-        </ul>
-    </nav>     
+        <nav>
+                <ul id="nav">
+                        <li><a href="/" id="homenav">Homepage</a></li>
+                        <li><a href="/about.html" id="aboutnav">About</a></li>
+                        <li><a href="/portfolio/index.html" id="portfolionav">Portfolio</a></li>
+                        <li><a href="/contact.html" id="contactnav">Contact</a></li>
+                </ul>
+            </nav>      
     
     <h1>404</h1>
 
