--- a/about.html
+++ b/about.html
@@ -29,18 +29,25 @@
 
 </head>
 
-<body>
+<body id="about">
 
     <nav>
         <ul id="nav">
-                <li><a href="/">Homepage</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/portfolio/index.html">Portfolio</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/" id="homenav">Homepage</a></li>
+                <li><a href="/about.html" id="aboutnav">About</a></li>
+                <li><a href="/portfolio/index.html" id="portfolionav">Portfolio</a></li>
+                <li><a href="/contact.html" id="contactnav">Contact</a></li>
         </ul>
     </nav>      
 
     <h1>About Me</h1>
+
+    <h2>Hi, I'm Valdyn!</h2>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, quo eius. Aut, alias ratione odit ipsa aperiam dicta eligendi at reiciendis commodi cumque quae illum, laudantium placeat corporis adipisci. Sed.</p>
+
+    <a href="/contact.html" class="btn btn-primary">Get in touch</a>
+
 
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
