--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,16 +35,16 @@ https://iconmonstr.com/email-4-svg/
 
 </head>
 
-<body class="portfolio">
+<body id="portfolio">
         
     <nav>
         <ul id="nav">
-                <li><a href="/">Homepage</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/portfolio/index.html">Portfolio</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/" id="homenav">Homepage</a></li>
+                <li><a href="/about.html" id="aboutnav">About</a></li>
+                <li><a href="/portfolio/index.html" id="portfolionav">Portfolio</a></li>
+                <li><a href="/contact.html" id="contactnav">Contact</a></li>
         </ul>
-    </nav>    
+    </nav>      
 
     <h1>Portfolio</h1>
 
