about page greeting

--- a/about.html
+++ b/about.html
@@ -42,7 +42,11 @@
 
     <h1>About Me</h1>
 
-    <h2>Hi, I'm Valdyn!</h2>
+    <div class="greet">
+        <div class="h1-text">Hi, I'm Valdyn.</div>
+        <p>&#x1F44B</p>
+    </div>
+
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, quo eius. Aut, alias ratione odit ipsa aperiam dicta eligendi at reiciendis commodi cumque quae illum, laudantium placeat corporis adipisci. Sed.</p>
 
