--- a/contact.html
+++ b/contact.html
@@ -45,15 +45,24 @@
     <form action="https://formspree.io/sw2345@mac.com" method="POST">
 
         <!-- visible -->
-        <label for="name">Name</label>
-        <input type="text" name="name">
+        <div class="input-group">
+            <label for="name">Name</label>
+            <input type="text" name="name">
+        </div>
 
-        <label for="_replyto">Email</label>
-        <input type="email" name="_replyto">
 
-        <label for="comments">Comments</label>
-        <textarea name="comments" id="formcomment" cols="30" rows="10"></textarea>
-        <input type="submit" value="Send">
+        <div class="input-group">
+            <label for="_replyto">Email</label>
+            <input type="email" name="_replyto">    
+        </div>
+
+
+        <div class="input-group">
+            <label for="comments">Comments</label>
+            <textarea name="comments" id="formcomment" cols="30" rows="10"></textarea> 
+        </div>
+
+        <input id="submit" class="btn btn-primary" type="submit" value="Send">
 
         <!-- hidden -->
         <input type="hidden" name="_next" value="/"/>
