--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -257,7 +257,7 @@ https://iconmonstr.com/email-4-svg/
                     </g>
                 </svg>
             </a>
-            <a href="mailto:valdyn@mac.com?subject=H%20to%20the%20ello" class="social-link" target="_blank">
+            <a href="mailto:valdyn@mac.com?subject=Hi%20Valdyn!" class="social-link" target="_blank">
             
                 <svg class="footer-icon" width="24px" height="18px" viewBox="0 0 24 18" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <!-- Generator: Sketch 51.3 (57544) - http://www.bohemiancoding.com/sketch -->
