increase photo size in lightGallery

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
     
     <h1>Contact Me</h1>
 
-    <p id="contactintro">Interested in working together? Like to network or just talk shop? Please fill out the form below with some into and I will get back to you as soon as I can.</p>
+    <p id="contactintro">Interested in working together? Like to network or just talk shop? Feel free to get in touch. I will get back to you as soon as I can.</p>
     
     <form action="https://formspree.io/sw2345@mac.com" method="POST">
 
