--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,6 +3,7 @@ https://iconmonstr.com/linkedin-1-svg/
 https://iconmonstr.com/twitter-1-svg/
 https://iconmonstr.com/email-4-svg/
 -->
+<!-- CSS Grid code leveraged from https://codepen.io/geoffgraham/pen/EbVELV -->
 
 <!DOCTYPE html>
 <html lang="en">
