--- a/404.html
+++ b/404.html
@@ -46,6 +46,10 @@ permalink: /404.html
     
     <h1>404</h1>
 
+    <h3>The page you are looking for is not here. Ooops!</h3>
+
+    <a href="/index.html" class="btn btn-primary">Return to homepage</a>
+
  <!-- Footer -->
  <footer id="footer">
         <div class="div-border"></div>
