--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@ permalink: /404.html
 
 </head>
 
-<body>
+<body id="404">
     
         <nav>
                 <ul id="nav">
@@ -46,7 +46,7 @@ permalink: /404.html
     
     <h1>404</h1>
 
-    <h1>The page you are looking for is not here. Ooops!</h1>
+    <h2>The page you are looking for is not here. Ooops!</h2>
 
     <a href="/index.html" class="btn btn-primary">Return to homepage</a>
 
