--- a/404.html
+++ b/404.html
@@ -46,6 +46,8 @@ permalink: /404.html
     
     <h1>404</h1>
 
+    <img src="/img/404.png" alt="">
+
     <h2>The page you are looking for is not here. Ooops!</h2>
 
     <a href="/index.html" class="btn btn-primary">Return to homepage</a>
