adjust margins on 404

--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@ permalink: /404.html
 
 </head>
 
-<body id="404">
+<body>
     
         <nav>
                 <ul id="nav">
@@ -44,13 +44,18 @@ permalink: /404.html
                 </ul>
             </nav>      
     
-    <h1>404</h1>
+    <div id="404">
 
-    <img src="/img/404.png" alt="">
+        <h1>404</h1>
 
-    <h2>The page you are looking for is not here. Ooops!</h2>
+        <img src="/img/404.png" alt="">
 
-    <a href="/index.html" class="btn btn-primary">Return to homepage</a>
+        <h2>The page you are looking for is not here. Ooops!</h2>
+
+        <a href="/index.html" class="btn btn-primary">Return to homepage</a>
+
+    </div>
+
 
  <!-- Footer -->
  <footer id="footer">
