404 replace png with svg

--- a/404.html
+++ b/404.html
@@ -48,7 +48,19 @@ permalink: /404.html
 
         <h1>404</h1>
 
-        <img src="/img/404.png" alt="">
+        
+<svg viewBox="0 0 110 60" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <!-- Generator: Sketch 51.3 (57544) - http://www.bohemiancoding.com/sketch -->
+    <desc>Created with Sketch.</desc>
+    <defs></defs>
+    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-family="Impact" font-size="72" font-style="condensed" font-weight="700">
+        <g id="Mobile" transform="translate(-10.000000, -9.000000)" fill="#000000">
+            <text id="404">
+                <tspan x="10.234375" y="67">404</tspan>
+            </text>
+        </g>
+    </g>
+</svg>
 
         <h2>The page you are looking for is not here. Ooops!</h2>
 
