modify fill color svg - 404

--- a/404.html
+++ b/404.html
@@ -54,8 +54,8 @@ permalink: /404.html
     <desc>Created with Sketch.</desc>
     <defs></defs>
     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-family="Impact" font-size="72" font-style="condensed" font-weight="700">
-        <g id="Mobile" transform="translate(-10.000000, -9.000000)" fill="#000000">
-            <text id="404">
+        <g id="Mobile" transform="translate(-10.000000, -9.000000)" fill="#9B9B9B">
+            <text id="404svg">
                 <tspan x="10.234375" y="67">404</tspan>
             </text>
         </g>
