--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@ permalink: /404.html
         <h1>404</h1>
 
         
-<svg viewBox="0 0 110 60" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg id="404svg" viewBox="0 0 110 60" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Generator: Sketch 51.3 (57544) - http://www.bohemiancoding.com/sketch -->
     <desc>Created with Sketch.</desc>
     <defs></defs>
