--- a/404.html
+++ b/404.html
@@ -55,7 +55,7 @@ permalink: /404.html
     <defs></defs>
     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-family="Impact" font-size="72" font-style="condensed" font-weight="700">
         <g id="Mobile" transform="translate(-10.000000, -9.000000)" fill="#9B9B9B">
-            <text id="404svg">
+            <text id="404svgtext">
                 <tspan x="10.234375" y="67">404</tspan>
             </text>
         </g>
