add resume and PSM I certificate

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
     <h1>Valdyn Hunt</h1>
     <h3>Designer | Developer</h3>
 
+
+    <a href="/docs/Valdyn-Hunt.pdf">Resume</a>
+    <br>
+    <a href="/docs/PSM I.pdf">Professional Scrum Master I - certification</a>
+
+
  <!-- Footer -->
  <footer id="footer">
         <div class="div-border"></div>
