--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -70,30 +70,30 @@ https://iconmonstr.com/email-4-svg/
             </figcaption>
         </figure>
         <figure class="module">
-            <a href="/img/spaced_p1.jpg">
-                <img class="design focal" src="/img/spaced_p1.jpg" alt="">
+            <a href="/img/centipede.jpg">
+                <img class="dev focal" src="/img/centipede.jpg" alt="">
             </a>
             <figcaption>
-                <h3>Spaced</h3>
-                <h4>Design</h4>
+                <h3>Centipede Clone</h3>
+                <h4>Development</h4>
             </figcaption>
         </figure>
         <figure class="module">
-            <a href="/img/spaced_p1.jpg">
-                <img class="design focal" src="/img/spaced_p1.jpg" alt="">
+            <a href="/img/digital_artP2.jpg">
+                <img class="illus focal" src="/img/digital_artP2.jpg" alt="">
             </a>
             <figcaption>
-                <h3>Spaced</h3>
-                <h4>Design</h4>
+                <h3>Organic Digital Art</h3>
+                <h4>Illustration</h4>
             </figcaption>
         </figure>
         <figure class="module">
-            <a href="/img/spaced_p1.jpg">
-                <img class="design focal" src="/img/spaced_p1.jpg" alt="">
+            <a href="/img/oregon_coast3.jpg">
+                <img class="photo focal" src="/img/oregon_coast3.jpg" alt="">
             </a>
             <figcaption>
-                <h3>Spaced</h3>
-                <h4>Design</h4>
+                <h3>Northwest Scenery</h3>
+                <h4>Photography</h4>
             </figcaption>
         </figure>
         <figure class="module">
