reformat main grid on portfolio

--- a/index.html
+++ b/index.html
@@ -43,10 +43,18 @@
     <h1>Valdyn Hunt</h1>
     <h3>Designer | Developer</h3>
 
+    <img src="/img/columbia_river.jpg" alt="">
 
-    <a href="/docs/Valdyn-Hunt.pdf">Resume</a>
-    <br>
-    <a href="/docs/PSM I.pdf">Professional Scrum Master I - certification</a>
+    <p>I took this photo travelling to Portland a few years ago. It is one of my favorite photos. Peaceful. Calm. Wouldn't you like to have that feeling when dealing with designers, developers, or technical consultants? Trusted. Prompt. Technical depth. My skill set covers many areas, including financial analysis and branding, front-end developement (HTML, CSS, and JavaScript), databases, and Java. Consider contacting me if you need help realizing your next vision for a web enabled application or appliance.</p>
+    <a href="/portfolio/index.html" class="btn btn-primary">Check out some of my work</a>
+
+
+    <div id="docs">
+        <a class="docs" href="/docs/Valdyn-Hunt.pdf">Resume</a>
+        <br>
+        <a class="docs" href="/docs/PSM I.pdf">Professional Scrum Master I</a>
+    </div>
+
 
 
  <!-- Footer -->
