--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,279 +50,128 @@ https://iconmonstr.com/email-4-svg/
 
     <h1>Portfolio</h1>
 
-    <h3 id="filter">Filter:
-        <button id="all">All</button> |
-        <button id="logo">Logo</button>
-        <button id="illus">Illustration</button>
-        <button id="photo">Photography</button>
-        <button id="design">Design</button>
-        <button id="dev">Development</button>
-    </h3>
+    <div class="caption" id="caption-1">
+            <h1>Spaced</h1>
+            <p>A website design for a fictional company that sells space travel.</p>
+    </div>
 
-    <div class="maingrid">
-        <figure class="module">
-            <a href="/img/spaced_p1.jpg">
-                <img class="design focal" src="/img/spaced_p1.jpg" alt="">
-            </a>
-            <figcaption>
+    <div class="caption" id="caption-2">
+            <h1>Centipede Clone</h1>
+            <p>Created a Centipede video game clone using Java and Java FX.</p>
+    </div>
+
+    <div class="caption" id="caption-3">
+            <h1>Caption 3 here</h1>
+            <p>Blah blah blah.</p>
+    </div>
+
+    <div class="caption" id="caption-4">
+            <h1>Caption 4 here</h1>
+            <p>Blah blah blah.</p>
+    </div>
+
+    <div class="caption" id="caption-5">
+            <h1>Caption 5 here</h1>
+            <p>Blah blah blah.</p>
+    </div>
+
+    <div class="caption" id="caption-6">
+            <h1>Caption 6 here</h1>
+            <p>Blah blah blah.</p>
+    </div>
+
+    <div class="caption" id="caption-7">
+            <h1>Caption 7 here</h1>
+            <p>Blah blah blah.</p>
+    </div>
+
+    <div class="caption" id="caption-8">
+            <h1>Caption 8 here</h1>
+            <p>Blah blah blah.</p>
+    </div>
+
+    <div class="caption" id="caption-9">
+            <h1>Caption 9 here</h1>
+            <p>Blah blah blah.</p>
+    </div>
+
+
+    <div class="maingrid" id="gallery-1">
+
+        <a class="module hover" href="/img/spaced_p1.jpg" data-sub-html="#caption-1">
+            <img class="design focal" src="/img/spaced_p1.jpg" alt="">
+            <div class="projectname">
                 <h3>Spaced</h3>
                 <h4>Design</h4>
-            </figcaption>
-        </figure>
-        <figure class="module">
-            <a href="/img/centipede.jpg">
-                <img class="dev focal" src="/img/centipede.jpg" alt="">
-            </a>
-            <figcaption>
+            </div>
+        </a>
+
+        <a class="module hover" href="/img/centipede.jpg" data-sub-html="#caption-2">
+            <img class="dev focal" src="/img/centipede.jpg" alt="">
+            <div class="projectname">
                 <h3>Centipede Clone</h3>
                 <h4>Development</h4>
-            </figcaption>
-        </figure>
-        <figure class="module">
-            <a href="/img/digital_artP2.jpg">
-                <img class="illus focal" src="/img/digital_artP2.jpg" alt="">
-            </a>
-            <figcaption>
+            </div>
+        </a>
+
+        <a class="module hover" href="/img/digital_artP2.jpg" data-sub-html="#caption-3">
+            <img class="illus focal" src="/img/digital_artP2.jpg" alt="">
+            <div class="projectname">
                 <h3>Organic Digital Art</h3>
                 <h4>Illustration</h4>
-            </figcaption>
-        </figure>
-        <figure class="module">
-            <a href="/img/oregon_coast3.jpg">
-                <img class="photo focal" src="/img/oregon_coast3.jpg" alt="">
-            </a>
-            <figcaption>
+            </div>
+        </a>
+
+        <a class="module hover" href="/img/oregon_coast3.jpg" data-sub-html="#caption-4">
+            <img class="photo focal" src="/img/oregon_coast3.jpg" alt="">
+            <div class="projectname">
                 <h3>Northwest Scenery</h3>
                 <h4>Photography</h4>
-            </figcaption>
-        </figure>
-        <figure class="module">
-            <a href="/img/spaced_p1.jpg">
-                <img class="design focal" src="/img/spaced_p1.jpg" alt="">
-            </a>
-            <figcaption>
-                <h3>Spaced</h3>
-                <h4>Design</h4>
-            </figcaption>
-        </figure>
-        <figure class="module">
-            <a href="/img/spaced_p1.jpg">
-                <img class="design focal" src="/img/spaced_p1.jpg" alt="">
-            </a>
-            <figcaption>
-                <h3>Spaced</h3>
-                <h4>Design</h4>
-            </figcaption>
-        </figure>
-        <figure class="module">
-            <a href="/img/spaced_p1.jpg">
-                <img class="design focal" src="/img/spaced_p1.jpg" alt="">
-            </a>
-            <figcaption>
-                <h3>Spaced</h3>
-                <h4>Design</h4>
-            </figcaption>
-        </figure>
-        <figure class="module">
-            <a href="/img/spaced_p1.jpg">
-                <img class="design focal" src="/img/spaced_p1.jpg" alt="">
-            </a>
-            <figcaption>
-                <h3>Spaced</h3>
-                <h4>Design</h4>
-            </figcaption>
-        </figure>
-        <figure class="module">
-            <a href="/img/spaced_p1.jpg">
-                <img class="design focal" src="/img/spaced_p1.jpg" alt="">
-            </a>
-            <figcaption>
-                <h3>Spaced</h3>
-                <h4>Design</h4>
-            </figcaption>
-        </figure>
+            </div>
+        </a>
 
+        <a class="module hover" href="/img/spaced_p5.jpg" data-sub-html="#caption-5">
+            <img class="design focal" src="/img/spaced_p5.jpg" alt="">
+            <div class="projectname">
+                <h3>Spaced Logo</h3>
+                <h4>Logo Design</h4>
+            </div>
+        </a>
+
+        <a class="module hover" href="/img/illustrator_photoshop_P3.jpg" data-sub-html="#caption-6">
+            <img class="design focal" src="/img/illustrator_photoshop_P3.jpg" alt="">
+            <div class="projectname">
+                <h3>Photoshop and Illustrator - Digital Art</h3>
+                <h4>Design, Illustration</h4>
+            </div>
+        </a>
+
+        <a class="module hover" href="/img/absynth.jpg" data-sub-html="#caption-7">
+            <img class="design focal" src="/img/absynth.jpg" alt="">
+            <div class="projectname">
+                <h3>Absynth</h3>
+                <h4>Abstract Illustration</h4>
+            </div>
+        </a>
+
+        <a class="module hover" href="/img/learning.jpg" data-sub-html="#caption-8">
+            <img class="photo focal" src="/img/learning.jpg" alt="">
+            <div class="projectname">
+                <h3>Learning Again</h3>
+                <h4>Photography, Design</h4>
+            </div>
+        </a>
+
+        <a class="module hover" href="/img/neither_death_nor_life.jpg" data-sub-html="#caption-9">
+            <img class="photo illus focal" src="/img/neither_death_nor_life.jpg" alt="">
+            <div class="projectname">
+                <h3>Neither Death Nor Life</h3>
+                <h4>Photography, Illustration</h4>
+            </div>
+        </a>
+
+    
     </div>
-
-
-    <div id="gallery-1">
-
-        <a href="/img/spaced_p1.jpg">
-            <img class="design focal" src="/img/spaced_p1.jpg" alt="">
-        </a>
-
-        <a href="/img/spaced_p2.jpg">
-            <img class="design" src="/img/spaced_p2.jpg" alt="">
-        </a>
-
-        <a href="/img/spaced_p3.jpg">
-            <img class="design" src="/img/spaced_p3.jpg" alt="">
-        </a>
-
-        <a href="/img/spaced_p4.jpg">
-            <img class="design" src="/img/spaced_p4.jpg" alt="">
-        </a>
-
-        <a href="/img/spaced_p5.jpg">
-            <img class="logo" src="/img/spaced_p5.jpg" alt="">
-        </a>
-
-        <a href="/img/spaced_p6.jpg">
-            <img class="design" src="/img/spaced_p6.jpg" alt="">
-        </a>
-
-    </div>
-
-    <div id="gallery-2">
-
-        <a href="/img/centipede.jpg">
-            <img class="dev focal" src="/img/centipede.jpg" alt="">
-        </a>
-
-        <a href="/img/digital_artP2.jpg">
-            <img class="illus" src="/img/digital_artP2.jpg" alt="">
-        </a>
-
-        <a href="/img/neither_death_nor_life.jpg">
-            <img class="photo illus" src="/img/neither_death_nor_life.jpg" alt="">
-        </a>
-
-        <a href="/img/illustrator_photoshop_P3.jpg">
-            <img class="illus" src="/img/illustrator_photoshop_P3.jpg" alt="">
-        </a>
-
-        <a href="/img/absynth.jpg">
-            <img class="illus" src="/img/absynth.jpg" alt="">
-        </a>
-
-        <a href="/img/blues brothers.jpg">
-            <img class="illus" src="/img/blues brothers.jpg" alt="">
-        </a>
-
-    </div>
-
-    <div id="gallery-3">
-
-        <a href="/img/columbia_river.jpg">
-            <img class="photo focal" src="/img/columbia_river.jpg" alt="">
-        </a>
-
-        <a href="/img/multnomah_falls.jpg">
-            <img class="photo" src="/img/multnomah_falls.jpg" alt="">
-        </a>
-
-        <a href="/img/winter_tree.jpg">
-            <img class="photo" src="/img/winter_tree.jpg" alt="">
-        </a>
-
-        <a href="/img/oregon_coast1.jpg">
-            <img class="photo" src="/img/oregon_coast1.jpg" alt="">
-        </a>
-
-        <a href="/img/oregon_coast2.jpg">
-            <img class="photo" src="/img/oregon_coast2.jpg" alt="">
-        </a>
-
-        <a href="/img/oregon_coast3.jpg">
-            <img class="photo" src="/img/oregon_coast3.jpg" alt="">
-        </a>
-
-        <a href="/img/oregon_coast4.jpg">
-            <img class="photo" src="/img/oregon_coast4.jpg" alt="">
-        </a>
-
-        <a href="/img/oregon_coast5.jpg">
-            <img class="photo" src="/img/oregon_coast5.jpg" alt="">
-        </a>
-
-        <a href="/img/tiffany1.jpg">
-            <img class="photo" src="/img/tiffany1.jpg" alt="">
-        </a>
-
-        <a href="/img/tiffany2.jpg">
-            <img class="photo" src="/img/tiffany2.jpg" alt="">
-        </a>
-
-        <a href="/img/tiffany3.jpg">
-            <img class="photo" src="/img/tiffany3.jpg" alt="">
-        </a>
-
-        <a href="/img/irelynn1.jpg">
-            <img class="photo" src="/img/irelynn1.jpg" alt="">
-        </a>
-
-        <a href="/img/irelynn2.jpg">
-            <img class="photo" src="/img/irelynn2.jpg" alt="">
-        </a>
-
-        <a href="/img/bird.jpg">
-            <img class="photo" src="/img/bird.jpg" alt="">
-        </a>
-
-        <a href="/img/coco.jpg">
-            <img class="photo" src="/img/coco.jpg" alt="">
-        </a>
-
-    </div>
-
-    <div id="gallery-4">
-
-
-    </div>
-
-    <nav>
-        <a href="#" id="grid">Grid</a>
-        <a href="#" id="list">List</a>
-    </nav>
-
-    <main class="grid" id="gallery-5">
-
-        <section>
-            <a href="/img/spaced_p1.jpg">
-                <img class="design focal" src="/img/spaced_p1.jpg" alt="">
-            </a>
-            <h2>Spaced</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi asperiores ea omnis unde inventore qui
-                repellat earum quidem? Reprehenderit asperiores unde quas eligendi quidem, neque beatae suscipit est
-                consequuntur architecto.</p>
-        </section>
-        <section>
-            <img src="/img/spaced_p2.jpg" alt="">
-            <h2>Centipede Clone</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi asperiores ea omnis unde inventore qui
-                repellat earum quidem? Reprehenderit asperiores unde quas eligendi quidem, neque beatae suscipit est
-                consequuntur architecto.</p>
-        </section>
-        <section>
-            <img src="/img/spaced_p3.jpg" alt="">
-            <h2>Title</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi asperiores ea omnis unde inventore qui
-                repellat earum quidem? Reprehenderit asperiores unde quas eligendi quidem, neque beatae suscipit est
-                consequuntur architecto.</p>
-        </section>
-        <section>
-            <img src="/img/spaced_p4.jpg" alt="">
-            <h2>Title</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi asperiores ea omnis unde inventore qui
-                repellat earum quidem? Reprehenderit asperiores unde quas eligendi quidem, neque beatae suscipit est
-                consequuntur architecto.</p>
-        </section>
-        <section>
-            <img src="/img/spaced_p5.jpg" alt="">
-            <h2>Title</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi asperiores ea omnis unde inventore qui
-                repellat earum quidem? Reprehenderit asperiores unde quas eligendi quidem, neque beatae suscipit est
-                consequuntur architecto.</p>
-        </section>
-        <section>
-            <img src="/img/spaced_p6.jpg" alt="">
-            <h2>Title</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi asperiores ea omnis unde inventore qui
-                repellat earum quidem? Reprehenderit asperiores unde quas eligendi quidem, neque beatae suscipit est
-                consequuntur architecto.</p>
-        </section>
-
-    </main>
 
     <!-- Footer -->
     <footer id="footer">
