correct link to filename

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -154,8 +154,8 @@ https://iconmonstr.com/email-4-svg/
             </div>
         </a>
 
-        <a class="module hover" href="/img/learning.jpg" data-sub-html="#caption-8">
-            <img class="photo focal" src="/img/learning.jpg" alt="">
+        <a class="module hover" href="/img/Learning.jpg" data-sub-html="#caption-8">
+            <img class="photo focal" src="/img/Learning.jpg" alt="">
             <div class="projectname">
                 <h3>Learning Again</h3>
                 <h4>Photography, Design</h4>
