update captions for images

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -61,38 +61,38 @@ https://iconmonstr.com/email-4-svg/
     </div>
 
     <div class="caption" id="caption-3">
-            <h1>Caption 3 here</h1>
+            <h1>Organic Digital Art</h1>
             <p>Blah blah blah.</p>
     </div>
 
     <div class="caption" id="caption-4">
-            <h1>Caption 4 here</h1>
-            <p>Blah blah blah.</p>
+            <h1>Oregon Coast</h1>
+            <p>Photograph of the Oregon coast. Taken with my iPhone.</p>
     </div>
 
     <div class="caption" id="caption-5">
-            <h1>Caption 5 here</h1>
-            <p>Blah blah blah.</p>
+            <h1>Spaced Logo</h1>
+            <p>Logo design for a fictional company that sells space travel.</p>
     </div>
 
     <div class="caption" id="caption-6">
-            <h1>Caption 6 here</h1>
-            <p>Blah blah blah.</p>
+            <h1>Photoshop and Illustrator - Digital Art</h1>
+            <p>Digital art project created using Photoshop and Illustrator.</p>
     </div>
 
     <div class="caption" id="caption-7">
-            <h1>Caption 7 here</h1>
-            <p>Blah blah blah.</p>
+            <h1>Absynth</h1>
+            <p>Hand drawn abstract art inspired by two musical pieces.</p>
     </div>
 
     <div class="caption" id="caption-8">
-            <h1>Caption 8 here</h1>
-            <p>Blah blah blah.</p>
+            <h1>Learning Again</h1>
+            <p>Photography, design, and Photoshop used to create this CD cover for Spokane singer Angela Hunt.</p>
     </div>
 
     <div class="caption" id="caption-9">
-            <h1>Caption 9 here</h1>
-            <p>Blah blah blah.</p>
+            <h1>Neither Death Nor Life</h1>
+            <p>Photography and Photoshop were used to create this piece of art - photo taken from an Easter play at a local church.</p>
     </div>
 
 
@@ -125,7 +125,7 @@ https://iconmonstr.com/email-4-svg/
         <a class="module hover" href="/img/oregon_coast3.jpg" data-sub-html="#caption-4">
             <img class="photo focal" src="/img/oregon_coast3.jpg" alt="">
             <div class="projectname">
-                <h3>Northwest Scenery</h3>
+                <h3>Oregon Coast</h3>
                 <h4>Photography</h4>
             </div>
         </a>
