update title and caption

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -62,7 +62,7 @@ https://iconmonstr.com/email-4-svg/
 
     <div class="caption" id="caption-3">
             <h1>Organic Digital Art</h1>
-            <p>Blah blah blah.</p>
+            <p>Scanned organic materials and applied Photoshop with effects.</p>
     </div>
 
     <div class="caption" id="caption-4">
@@ -76,7 +76,7 @@ https://iconmonstr.com/email-4-svg/
     </div>
 
     <div class="caption" id="caption-6">
-            <h1>Photoshop and Illustrator - Digital Art</h1>
+            <h1>Digital Art</h1>
             <p>Digital art project created using Photoshop and Illustrator.</p>
     </div>
 
