modify responsive design margins and max-width's

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -141,7 +141,7 @@ https://iconmonstr.com/email-4-svg/
         <a class="module hover" href="/img/illustrator_photoshop_P3.jpg" data-sub-html="#caption-6">
             <img class="design focal" src="/img/illustrator_photoshop_P3.jpg" alt="">
             <div class="projectname">
-                <h3>Photoshop and Illustrator - Digital Art</h3>
+                <h3>Digital Art</h3>
                 <h4>Design, Illustration</h4>
             </div>
         </a>
